[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dotenv = "0.15"
base64 = "0.13"
git2 = "0.18"
tempfile = "3.8"
toml = "0.8"
regex = "1.10"
solana-sdk = "3.0.0"
solana-client = "3.0.7"
sha2 = "0.10.9"
bs58 = "0.5.1"
